test/fail/error_cyclic/error_cyclic_foo.sest
import ErrorCyclicBar

module ErrorCyclicFoo = struct
  val main() = {}
end
